# vacation-manager-mcp

./: .pre-commit-config.yaml  pyproject.toml
mcp/: mcp.py
vacation_mcp/: employees.py  exceptions.py  main.py  resources.py  server.py
vacation_mcp/tools/: __init__.py  employee.py  vacation.py
