[project]
name = "vacation_mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["vacation_mcp"]
